cut off comment fix

--- a/01-basic-rails-app/snippets/Dockerfile
+++ b/01-basic-rails-app/snippets/Dockerfile
@@ -25,7 +25,7 @@ RUN bundle install
 
 # Copy code from working directory outside Docker to working directory inside Docker
 COPY . .
-#This extra bundle call is needed to avoid
+#This extra bundle call is needed to install unicorn-related binaries / native extensions
 RUN bundle
 
 # The default command to start the Unicorn server.
